--- a/GW_Zchromosome_analysis.qmd
+++ b/GW_Zchromosome_analysis.qmd
@@ -298,7 +298,7 @@ plotInfo = plotGenotypeByIndividual(groupsToCompare, Fst_cutoff, missingFraction
     regionInfo, pos_SNP_filtered_chZcleaned, Fst, pairwiseNamesFst, 
     genosOnly_included, ind_with_metadata_included, freqs, plotGroups, plotGroupColors;
     plotTitle = "");
-save("Figure2_from_Julia.svg", plotInfo[1])
+save("Figure2_from_Julia_test.png", plotInfo[1], px_per_unit = 2.0) # the last bit doubles the pixels per row and per column (times 4 overall) 
 
 ```
 
@@ -343,7 +343,7 @@ plotInfo = plotGenotypeByIndividual(groupsToCompare, Fst_cutoff, missingFraction
 save("Figure_suppWestZ_from_Julia.svg", plotInfo[1])
 ```
 
-PCA for west side:
+### Do Z-chromosome PCA on west side
 
 ```{julia}
 groups_to_plot_PCA = ["vir", "vir_misID", "vir_S", "nit", "lud_PK", "lud_KS", "lud_central", "lud_Sath", "lud_ML", "troch_west", "troch_LN"]
